# codemail

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/codemail/: codex_client.py  config.py  email_utils.py  mailer.py  runner.py
