[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemail"
version = "0.1.1"
description = "Email-ingest automation for Codex tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Branch Manager"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: System :: Systems Administration",
]
keywords = ["codex", "automation", "email", "postfix", "mta", "workflow"]
dependencies = [
    "markdown>=3.5,<4",
]

[project.urls]
Homepage = "https://github.com/BranchManager69/codemail"
Issues = "https://github.com/BranchManager69/codemail/issues"

[project.scripts]
codemail-runner = "codemail.runner:main"
